--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "CRUD ",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon"
+    "start": "nodemon server.js",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "body-parser": "~1.18.1",
+    "dotenv": "^6.0.0",
     "express": "~4.15.5",
     "mongoose": "~4.11.12",
     "nodemon": "^1.17.4",
+    "path": "^0.12.7",
     "request": "~2.82.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   },
   "author": "Vitor Hugo",
   "license": "MIT"
