--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --timeout 10000"
+    "test": "mocha --exit --timeout 10000"
   },
   "dependencies": {
     "body-parser": "~1.18.1",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "dotenv": "^6.0.0",
     "express": "~4.15.5",
+    "mocha": "^2.5.3",
     "mongoose": "~4.11.12",
     "nodemon": "^1.17.4",
     "path": "^0.12.7",
     "request": "~2.82.0"
   },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "mocha": "^2.4.5"
-  },
+  "devDependencies": {},
   "author": "Vitor Hugo",
   "license": "MIT"
 }
