--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --exit --timeout 10000"
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "body-parser": "~1.18.1",
