--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "~4.15.5",
     "mocha": "^2.5.3",
     "mongoose": "~4.11.12",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "nodemon": "^1.17.4",
     "path": "^0.12.7",
-    "request": "~2.82.0"
+    "request": "~2.82.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {},
   "author": "Vitor Hugo",
